<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_posts.presentation.screen.post_detail_screen.DetailFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/default_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="25dp"
        app:titleTextColor="@color/white"
        android:theme="@style/ToolbarTheme"/>

    <!-- Description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            style="@style/DetailSectionHeader"
            android:text="@string/body_header"
            android:paddingHorizontal="@dimen/marginDetail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_body"
            android:paddingHorizontal="@dimen/marginDetail"/>

        <!-- User Info -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailSectionHeader"
            android:text="@string/userinfo_header"
            android:paddingHorizontal="@dimen/marginDetail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_name"
                android:paddingHorizontal="@dimen/marginDetail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_userName"
                android:paddingHorizontal="@dimen/marginDetail"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_email"
                android:paddingHorizontal="@dimen/marginDetail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_userEmail"
                android:paddingHorizontal="@dimen/marginDetail"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_phone"
                android:paddingHorizontal="@dimen/marginDetail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_userPhone"
                android:paddingHorizontal="@dimen/marginDetail"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_website"
                android:paddingHorizontal="@dimen/marginDetail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_userWebsite"
                android:paddingHorizontal="@dimen/marginDetail"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailSectionHeader"
            android:background="@color/commentSectionBackground"
            android:text="@string/commentsection_header"
            android:paddingHorizontal="@dimen/marginDetail"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_comments"
            android:layout_marginHorizontal="@dimen/marginDetail"/>


</LinearLayout>